--- a/index.html
+++ b/index.html
@@ -5,3 +5,14 @@
 BONUS POINT: Nest an image tag inside of the div element. Use this for your image source: http://placekitten.com/g/300/300. Your image tag should include the image source and an alt attribute.-->
 
 <!DOCTYPE html>
+<html>
+<head></head>
+  <title></title>
+<body>
+  <header></header>
+  <div></div>
+  
+</body>
+<img http://placekitten.com/g/300/300width="42">
+  <footer></footer>
+    </html>
